--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -10,7 +10,8 @@
 html, body, #app, .wrapper {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+ // overflow: hidden;
+ // overflow: scroll;
 }
 
 body {
